[package]
name = "phone_number"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]

[dependencies]
pgrx = "=0.11.4"
rand = "0.8.5"
serde = "1.0.202"

[dev-dependencies]
pgrx-tests = "=0.11.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
